--- a/style.css
+++ b/style.css
@@ -207,9 +207,7 @@ p {
 	top: 0;
 }
 
-/* .photo{
-	padding-bottom: 5rem;
-} */
+
 
 .service-bottom{
 	transition: all 3s 1s;
@@ -445,7 +443,7 @@ p {
 	right:30px;
 	object-fit: contain; */
 	object-position: 50% 15px;
-	box-shadow: red,50rem;
+	box-shadow: 5px 5px 2px rgba(135, 32, 32, .5);
 	
 	
 	
