--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ a {
 	text-decoration: none;
 }
 .container {
-	min-height: 100vh;
+	min-height: 50vh;
 	width: 100%;
 	display: flex;
 	align-items: center;
@@ -206,6 +206,10 @@ p {
 #header .hamburger.active .bar::after {
 	top: 0;
 }
+
+/* input{
+	width: 50px;
+} */
 
 
 
@@ -695,6 +699,10 @@ p {
 		width: 30%;
 		margin: 0;
 		flex-direction: row;
+		margin-bottom: 10px;
+	}
+	#User {
+flex-direction: row;
 	}
 	#contact .contact-item .icon {
 		height: 100px;
