--- a/style.css
+++ b/style.css
@@ -508,7 +508,6 @@ p {
 	border-radius: 10px;
 	width: 100%;
 	padding: 30px;
-	
 	justify-content: center;
 	align-items: center;
 	box-shadow: 0px 0px 18px 0 #0000002c;
@@ -516,6 +515,10 @@ p {
 }
 #contact .contact-item:hover {
 	box-shadow: 0px 0px 5px 0 #0000002c;
+}
+
+.link{
+	width: 50rem;
 }
 #contact .icon {
 	width: 70px;
