--- a/style.css
+++ b/style.css
@@ -517,9 +517,9 @@ p {
 	box-shadow: 0px 0px 5px 0 #0000002c;
 }
 
-.link{
+/* .link{
 	width: 50rem;
-}
+} */
 #contact .icon {
 	width: 70px;
 	margin: 0 auto;
