--- a/style.css
+++ b/style.css
@@ -207,10 +207,6 @@ p {
 	top: 0;
 }
 
-<<<<<<< HEAD
-=======
-
->>>>>>> parent of 1188d01 (container)
 
 .service-bottom{
 	transition: all 3s 1s;
@@ -502,16 +498,12 @@ p {
 #contact .contact-items {
 	/* max-width: 400px; */
 	width: 100%;
-	
-	
-
-
 }
 #contact .contact-item {
 	text-align: center;
 	border-radius: 10px;
 	width: 50rem;
-	padding: 50px;
+	padding: 50rem;
 	justify-content: center;
 	align-items: center;
 	box-shadow: 0px 0px 18px 0 #0000002c;
@@ -717,10 +709,6 @@ p {
 		margin: 0;
 		padding:2rem;
 		flex-direction: row;
-<<<<<<< HEAD
-		margin-bottom: 10px;
-=======
->>>>>>> parent of 1188d01 (container)
 	}
 	#contact .contact-item .icon {
 		height: 100px;
@@ -778,4 +766,7 @@ p {
 	transform: translateX(5rem);
 }
 
+#contact-form{
+	display: ;
+}
 /* End  Media Query For Desktop */
